<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_rate_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:contentDescription="@null"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_rate_back"
        app:tint="@color/clr_gray" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/imgFeedback"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie/feedback.json"
                app:lottie_loop="true"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/str_rate_feedback_title"
                android:textAppearance="@style/Font.DMSan.700"
                android:textColor="@color/clr_text"
                android:textSize="@dimen/text_size_18" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_20"
                android:layout_marginTop="@dimen/space_8"
                android:textAppearance="@style/Font.DMSan.400"
                android:gravity="center"
                android:text="@string/str_rate_feedback_description"
                android:textColor="@color/clr_text"
                android:textSize="@dimen/text_size_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_20"
                android:layout_weight="1"
                android:background="@drawable/rate_background_top_radius_24"
                android:orientation="vertical"
                android:padding="@dimen/space_12">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/space_8"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:gravity="top"
                    android:hint="@string/str_rate_feedback_content_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:paddingHorizontal="0dp"
                    android:textColor="@color/clr_text"
                    android:textColorHint="#59000000"
                    android:textSize="@dimen/text_size_14" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icn_rate_add_media"
                    android:drawablePadding="@dimen/space_8"
                    android:gravity="center_vertical"
                    android:text="@string/str_rate_upload_photos"
                    android:textAppearance="@style/Font.DMSan.700"
                    android:textColor="@color/clr_text"
                    android:textSize="@dimen/text_size_13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/txtSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:background="@drawable/rate_bg_corner_rounded_primary"
                    android:gravity="center"
                    android:text="@string/str_rate_submit"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Font.DMSan.700"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
