<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rate_background_top_radius_24"
    android:padding="@dimen/space_16">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/lavCanRate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_rate_us"
        app:layout_constraintDimensionRatio="217:135"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_4"
        android:src="@drawable/ic_rate_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#C5C7DD" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_rate_question_show_rate"
        android:textAppearance="@style/Font.DMSan.700"
        android:textColor="@color/clr_text"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lavCanRate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnUnsatisfied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_8"
        android:background="@drawable/rate_bg_button_rate_selector"
        android:drawableTop="@drawable/ic_rate_unsatisfied"
        android:drawablePadding="@dimen/space_8"
        android:gravity="center"
        android:padding="@dimen/space_8"
        android:text="@string/str_rate_can_not_show_rate"
        android:textAppearance="@style/Font.DMSan.500"
        android:textColor="@color/clr_text"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toStartOf="@id/btnSatisfied"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSatisfied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/rate_bg_button_rate_selector"
        android:drawableTop="@drawable/ic_rate_satisfied"
        android:drawablePadding="@dimen/space_8"
        android:gravity="center"
        android:padding="@dimen/space_8"
        android:text="@string/str_rate_confirm_show_rate"
        android:textAppearance="@style/Font.DMSan.500"
        android:textColor="@color/clr_text"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnUnsatisfied"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>