<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#50000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_32"
        android:background="@drawable/rate_bg_corner_8"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/space_24"
        android:paddingBottom="@dimen/space_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_36"
            android:gravity="center"
            android:text="@string/str_rate_rate_app_title"
            android:textAppearance="@style/Font.DMSan.700"
            android:textColor="@color/clr_text"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/str_rate_rate_description"
            android:textAppearance="@style/Font.DMSan.400"
            android:textColor="@color/clr_text"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginEnd="@dimen/space_2"
            android:gravity="end"
            android:text="@string/str_rate_give_us_5_stars"
            android:textAppearance="@style/Font.DMSan.400"
            android:textColor="@color/clr_rate_primary"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintEnd_toStartOf="@id/ivBestWay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBestWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/space_16"
            android:src="@drawable/ic_rate_best_way"
            app:layout_constraintEnd_toEndOf="@id/rcvRating"
            app:layout_constraintTop_toBottomOf="@id/tvBest"
            app:layout_constraintTop_toTopOf="@id/tvBest" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/btnRate"
            app:layout_constraintTop_toBottomOf="@id/tvBest" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginBottom="@dimen/space_4"
            android:background="@drawable/rate_bg_corner_rounded_primary"
            android:backgroundTint="@color/clr_rate_primary"
            android:gravity="center"
            android:minHeight="0dp"
            android:paddingVertical="@dimen/space_8"
            android:text="@string/str_rate_rate_us"
            android:textAllCaps="false"
            android:textAppearance="@style/Font.DMSan.700"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rcvRating" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewCircle"
        android:layout_width="@dimen/_72sdp"
        android:layout_height="@dimen/_72sdp"
        app:cardCornerRadius="@dimen/_36sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="@id/content"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toTopOf="@id/content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavSmile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/icn_rate_rate_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />
</androidx.constraintlayout.widget.ConstraintLayout>
